--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
     "name": "simplepushtester",
     "description": "simulates simplepush clients and servers",
-    "repository": "https://github.com/oremj/simplepushtester.git"
+    "repository": "https://github.com/oremj/simplepushtester.git",
+    "dependencies": {
+    	"ws": "0.4.x",
+        "commander": "2.0.x"
+    }
 }
