--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "description": "simulates simplepush clients and servers",
     "repository": "https://github.com/oremj/simplepushtester.git",
     "dependencies": {
-    	"ws": "0.4.x",
-        "commander": "2.0.x"
+        "ws": "0.4.x",
+        "commander": "2.0.x",
+        "node-uuid": "1.4.x"
     }
 }
