--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
     "description": "simulates simplepush clients and servers",
     "repository": "https://github.com/oremj/simplepushtester.git",
     "dependencies": {
-        "ws": "0.4.x",
-        "commander": "2.0.x",
-        "node-uuid": "1.4.x"
+        "commander": "2.0.x"
+        , "express": "3.3.5"
+        , "jade" : "0.34.1"
+        , "stylus": "0.36.1"
+        , "nib": "0.9.2"
+        , "node-uuid": "1.4.x"
+        , "ws": "0.4.x"
     }
 }
